# pidmonitor

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: name2pid.hpp  pidmonitor.hpp  tracepid.hpp
src/etw/: eventparse.hpp  evntbase.h  pidmonitor.cpp  string_dict_key.hpp  trace.cpp  trace.hpp  trace_undocumented.c  trace_undocumented.h  tracepid.cpp
src/wmi/: name2pid.cpp  query.hpp
test/: test.cpp
